# dashboard-performance-ecg

./: .gitignore  LICENSES.md  README.md  database.py  main.py  models.py  pyproject.toml
app/: __init__.py  database.py  main.py  models.py
app/static/: styles.css
app/templates/: index.html  text.html
