[project]
name = "dashboard-performance-ecg"
version = "0.1.0"
description = "A FastAPI-based dashboard for tracking ML model performance"
authors = [{ name = "Richard Koehler", email = "richard.koehler@outlook.com" }]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "pandas>=2.1.3",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "types-aiofiles>=23.2.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.1.6", "mypy>=1.7.1", "black>=23.11.0"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[project.urls]
"Homepage" = "https://github.com/richardkoehler/dashboard-performance-ecg"
"Bug Tracker" = "https://github.com/richardkoehler/dashboard-performance-ecg/issues"
